--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: required
 services:
   - docker
 before_install:
-  - docker build -t deepali123/docker-react -f Dockerfile.dev .
+  - docker build -t deepali123/docker-react .
 script:
   - docker run deepali123/docker-react npm run test -- --coverage
 deploy:
